--- a/index.html
+++ b/index.html
@@ -11,20 +11,39 @@
   <body>
     <div class="container">
 
-        <aside id="aside">
+        <div id="aside">
+            <h1>Search for a City:</h1>
+            <div id="searchForCity"></div>
+            <ul id="cities">
+                <li id="cty1"></li>
+                <li id="cty2"></li>
+                <li id="cty3"></li>
+                <li id="cty4"></li>
+                <li id="cty5"></li>
+                <li id="cty6"></li>
+                <li id="cty7"></li>
+                <li id="cty8"></li>
+            </ul>
+        </div>
 
-        </aside>
-
-        
+        <div id="cityContainer">
+            <div id="cityInfo"></div>
+            <div id="fiveDayContainer">
+                <ul id="fiveDayForecast">
+                    <li id="day1"></li>
+                    <li id="day2"></li>
+                    <li id="day3"></li>
+                    <li id="day4"></li>
+                    <li id="day5"></li>
+                </ul>
+            </div>
+        </div>
 
     </div>>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="./assets/js/js.js" ></script>
-    <script>
-      $(document).foundation();
-    </script>
 
   </body>
 </html>
