--- a/index.html
+++ b/index.html
@@ -8,26 +8,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/css.css">
   </head>
-  <body>
-    <div class="container">
+  <body class="container">
+    <header>hello</header>
+    <div id="websiteMainContainer" class="container"></div>
 
-        <div id="aside">
+        <div id="aside" class="container">
             <h1>Search for a City:</h1>
-            <div id="searchForCity"></div>
+            <form class="form-inline">
+                <div class="form-group mb-2"></div>
+                <div class="form-group mx-sm-3 mb-2">
+                  <label for="inputPassword2" class="sr-only">city</label>
+                  <input type="password" class="form-control" id="inputPassword2" placeholder="city">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">search</button>
+            </form>
             <ul id="cities">
-                <li id="cty1"></li>
-                <li id="cty2"></li>
-                <li id="cty3"></li>
-                <li id="cty4"></li>
-                <li id="cty5"></li>
-                <li id="cty6"></li>
-                <li id="cty7"></li>
-                <li id="cty8"></li>
+                <li id="cty1">Austin</li>
+                <li id="cty2">Chicago</li>
+                <li id="cty3">New York</li>
+                <li id="cty4">Orlando</li>
+                <li id="cty5">San Fancisco</li>
+                <li id="cty6">Seattle</li>
+                <li id="cty7">Denver</li>
+                <li id="cty8">Atlanta</li>
             </ul>
         </div>
 
-        <div id="cityContainer">
-            <div id="cityInfo"></div>
+     
+        <div id="cityContainer" class="container">
+            <div id="cityInfo">cityInfo</div>
             <div id="fiveDayContainer">
                 <ul id="fiveDayForecast">
                     <li id="day1"></li>
@@ -39,7 +48,7 @@
             </div>
         </div>
 
-    </div>>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
