--- a/index.html
+++ b/index.html
@@ -6,48 +6,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Themancalledzac Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/css.css">
   </head>
-  <body class="container">
-    <header>hello</header>
-    <div id="websiteMainContainer" class="container"></div>
+  <body class="bt-light">
 
-        <div id="aside" class="container">
-            <h1>Search for a City:</h1>
-            <form class="form-inline">
-                <div class="form-group mb-2"></div>
-                <div class="form-group mx-sm-3 mb-2">
-                  <label for="inputPassword2" class="sr-only">city</label>
-                  <input type="password" class="form-control" id="inputPassword2" placeholder="city">
-                </div>
-                <button type="submit" class="btn btn-primary mb-2">search</button>
-            </form>
-            <ul id="cities">
-                <li id="cty1">Austin</li>
-                <li id="cty2">Chicago</li>
-                <li id="cty3">New York</li>
-                <li id="cty4">Orlando</li>
-                <li id="cty5">San Fancisco</li>
-                <li id="cty6">Seattle</li>
-                <li id="cty7">Denver</li>
-                <li id="cty8">Atlanta</li>
-            </ul>
+    <div class="container">
+        <div class="py-5 text-center jumbo rounded">
+            <h2>Weather Dashboard</h2>
+            <p class="lead">HW 06 for UW Bootcamp</p>
         </div>
-
-     
-        <div id="cityContainer" class="container">
-            <div id="cityInfo">cityInfo</div>
-            <div id="fiveDayContainer">
-                <ul id="fiveDayForecast">
-                    <li id="day1"></li>
-                    <li id="day2"></li>
-                    <li id="day3"></li>
-                    <li id="day4"></li>
-                    <li id="day5"></li>
+        <div class="row">
+            <div id="aside" class="col-md-4 order-md-1 mb-4">
+                <h4>Search for a City:</h4>
+                <form class="card p-2">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="city">
+                        <!-- <div class="form-group mb-2"></div> -->
+                        <!-- <div class="form-group mx-sm-3 mb-2">
+                            <label for="inputPassword2" class="sr-only">city</label>
+                            <input type="text" class="form-control" placeholder="city">
+                        </div> -->
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-primary mb-2">S</button>
+                        </div>
+                    </div>
+                </form>
+                <ul id="cities" class="list-group mb-3">
+                    <li id="cty1" class="list-group-item d-flex justify-content-between 1h-condensed">Austin</li>
+                    <li id="cty2" class="list-group-item d-flex justify-content-between 1h-condensed">Chicago</li>
+                    <li id="cty3" class="list-group-item d-flex justify-content-between 1h-condensed">New York</li>
+                    <li id="cty4" class="list-group-item d-flex justify-content-between 1h-condensed">Orlando</li>
+                    <li id="cty5" class="list-group-item d-flex justify-content-between 1h-condensed">San Fancisco</li>
+                    <li id="cty6" class="list-group-item d-flex justify-content-between 1h-condensed">Seattle</li>
+                    <li id="cty7" class="list-group-item d-flex justify-content-between 1h-condensed">Denver</li>
+                    <li id="cty8" class="list-group-item d-flex justify-content-between 1h-condensed">Atlanta</li>
                 </ul>
             </div>
-        </div>
 
+        
+            <div id="cityContainer" class="col-md-8 order-md-2">
+                <div id="cityInfo" class="card col border rounded mb-3">
+                    <div class="card-body">
+                        <h2 class="cityTitle">Atlanta (8/15/2019)</h2>
+                        <h6 class="temp">Temperature: 90 F</h6>
+                        <h6 class="humidity">Humidity: 41%</h6>
+                        <h6 class="windSpeed">Wind Speed: 4.7 MPH</h6>
+                        <h6 class="UVIndex">UV Index: 9.49</h6>
+                    </div>
+                </div>
+                <div class="card col border rounded mb-3">
+                    <h2 class="5dayForecast card-title mb-2">5-Day Forecast:</h2>
+                    <div id="fiveDayContainer" class="row text-white">
+                        <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
+                            <h5>11/11/2020</h5>
+                            <img src="">
+                            <p>Temperature: 40F</p>
+                            <p>Humidity: 4.3%</p>
+                        </div>
+                        <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
+                            <h5>11/11/2020</h5>
+                            <img src="">
+                            <p>Temperature: 40F</p>
+                            <p>Humidity: 4.3%</p>
+                        </div>
+                        <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
+                            <h5>11/11/2020</h5>
+                            <img src="">
+                            <p>Temperature: 40F</p>
+                            <p>Humidity: 4.3%</p>
+                        </div>
+                        <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
+                            <h5>11/11/2020</h5>
+                            <img src="">
+                            <p>Temperature: 40F</p>
+                            <p>Humidity: 4.3%</p>
+                        </div>
+                        <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
+                            <h5>11/11/2020</h5>
+                            <img src="">
+                            <p>Temperature: 40F</p>
+                            <p>Humidity: 4.3%</p>
+                        </div>
+                        <!-- <ul id="fiveDayForecast" class="list-group list-group-horizontal">
+                            <li id="day1" class="list-group-item dayWeather item">
+                                <div class="card-body">
+                                    <h5 class="card-title">8.16.2020</h5>
+                                    <h6 class="card-text">emoji of weather</h6>
+                                    <h6 class="card-text">Temp: 86 F</h6>
+                                    <h6 class="card-text">Humidity: 4.3%</h6>
+                                </div>
+                            </li>
+                            <li id="day2" class="list-group-item dayWeather item">
+                                <div class="card-body">
+                                    <h5 class="card-title">8.16.2020</h5>
+                                    <h6 class="card-text">emoji of weather</h6>
+                                    <h6 class="card-text">Temp: 86 F</h6>
+                                    <h6 class="card-text">Humidity: 4.3%</h6>
+                                </div>
+                            </li>
+                            <li id="day3" class="list-group-item dayWeather item">
+                                <div class="card-body">
+                                    <h5 class="card-title">8.16.2020</h5>
+                                    <h6 class="card-text">emoji of weather</h6>
+                                    <h6 class="card-text">Temp: 86 F</h6>
+                                    <h6 class="card-text">Humidity: 4.3%</h6>
+                                </div>
+                            </li>
+                            <li id="day4" class="list-group-item dayWeather item">
+                                <div class="card-body">
+                                    <h5 class="card-title">8.16.2020</h5>
+                                    <h6 class="card-text">emoji of weather</h6>
+                                    <h6 class="card-text">Temp: 86 F</h6>
+                                    <h6 class="card-text">Humidity: 4.3%</h6>
+                                </div>
+                            </li>
+                            <li id="day5" class="list-group-item dayWeather item">
+                                <div class="card-body">
+                                    <h5 class="card-title">8.16.2020</h5>
+                                    <h6 class="card-text">emoji of weather</h6>
+                                    <h6 class="card-text">Temp: 86 F</h6>
+                                    <h6 class="card-text">Humidity: 4.3%</h6>
+                                </div>
+                            </li>
+                        </ul> -->
+                    </div>
+                    <!-- <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div> -->
+
+
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
