started JS, fixed css so the 5 day weather now properly shows on every width.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <input type="text" class="form-control" placeholder="city">
                         </div> -->
                         <div class="input-group-append">
-                            <button type="submit" class="btn btn-primary mb-2">S</button>
+                            <button type="submit" id="btnMain" class="btn btn-primary mb-2">S</button>
                         </div>
                     </div>
                 </form>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="card col border rounded mb-3">
                     <h2 class="5dayForecast card-title mb-2">5-Day Forecast:</h2>
-                    <div id="fiveDayContainer" class="row text-white">
+                    <div id="fiveDayContainer" class="row text-white mb-2">
                         <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
                             <h5>11/11/2020</h5>
                             <img src="">
