added github pages link to README. Also a few odd changes.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="card col border rounded mb-3">
                     <h2 class="5dayForecast card-title mb-2">5-Day Forecast:</h2>
-                    <div id="fiveDayContainer" class="row text-white mb-2">
+                    <div id="fiveDayContainer" class="row text-white mb-2 d-flex justify-content-around">
                         <div class="col-12 col-md-2 bg-primary rounded ml-3 mb-3">
                             <h5>11/11/2020</h5>
                             <img src="">
