--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h4>Search for a City:</h4>
                 <form class="card p-2">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="city">
+                        <input id="citiesInput" type="text" class="form-control" placeholder="city">
                         <!-- <div class="form-group mb-2"></div> -->
                         <!-- <div class="form-group mx-sm-3 mb-2">
                             <label for="inputPassword2" class="sr-only">city</label>
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                 </form>
-                <ul id="cities" class="list-group mb-3">
+                <ul id="citiesList" class="list-group mb-3">
                     <li id="cty1" data-time="1" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty2" data-time="2" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty3" data-time="3" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
@@ -49,7 +49,7 @@
                 <div id="cityInfo" class="card col border rounded mb-3">
                     <div class="card-body">
                         <h2 class="cityTitle">Atlanta (8/15/2019)</h2>
-                        <h6 class="temp">Temperature: 90 F</h6>
+                        <h6 class="mainTemp">Temperature: 95 F</h6>
                         <h6 class="humidity">Humidity: 41%</h6>
                         <h6 class="windSpeed">Wind Speed: 4.7 MPH</h6>
                         <h6 class="UVIndex">UV Index: 9.49</h6>
@@ -186,7 +186,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.js"  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="./assets/js/js.js" ></script>
 
