Main city now properly displays temp, humidity, and wind speed, Also city name.)

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <div id="cityContainer" class="col-md-8 order-md-2">
                 <div id="cityInfo" class="card col border rounded mb-3">
                     <div class="card-body">
-                        <h2 class="cityTitle">Atlanta (8/15/2019)</h2>
-                        <h6 class="mainTemp">Temperature: 95 F</h6>
-                        <h6 class="humidity">Humidity: 41%</h6>
-                        <h6 class="windSpeed">Wind Speed: 4.7 MPH</h6>
-                        <h6 class="UVIndex">UV Index: 9.49</h6>
+                        <h2 id="cityTitle">Atlanta (8/15/2019)</h2>
+                        <h6 id="mainTemp">Temperature: 95 F</h6>
+                        <h6 id="humidity">Humidity: 41%</h6>
+                        <h6 id="windSpeed">Wind Speed: 4.7 MPH</h6>
+                        <h6 id="UVIndex">UV Index: 9.49</h6>
                     </div>
                 </div>
                 <div class="card col border rounded mb-3">
