--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                     </div>
                 </form>
                 <ul id="citiesList" class="list-group mb-3">
-                    <li id="cty1" data-time="1" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
+                    <!-- <li id="cty1" data-time="1" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty2" data-time="2" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty3" data-time="3" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty4" data-time="4" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty5" data-time="5" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty6" data-time="6" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
                     <li id="cty7" data-time="7" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
-                    <li id="cty8" data-time="8" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li>
+                    <li id="cty8" data-time="8" class="list-group-item d-flex justify-content-between 1h-condensed displayNone"></li> -->
                 </ul>
             </div>
 
